objects/NH_Community__c.object
<CustomObject>
    <fields>
        <fullName>AHJ__c</fullName>
        <label>AHJ</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NH_CommunitiesjmXs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Square_Footage_N__c</fullName>
        <label>Base Square Footage N</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Builder_Delivery_Info__c</fullName>
        <label>Builder Delivery Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Builder_HERS_Rater__c</fullName>
        <label>Builder HERS Rater</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Builder_Name__c</fullName>
        <description>Name of the Builder</description>
        <label>Builder Name</label>
        <picklist>
            <picklistValues>
                <fullName>Alta Verde Builders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Premiere Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bardis Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beazer Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brookfield Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BuildMark Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CalAtlantic Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California Home Builders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castle &amp; Cooke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christopher Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coastal Community Builders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comstock Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cornerstone Communities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Weekley Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DeNova Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversified Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR Horton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Far West Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fouts Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frontier Communities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Griffin Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irvine Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K. Hovnanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KB Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keusder Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KirE Builders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Koelbel and Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landsea Holding Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MasterCraft Homes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Builder_Preferred_Roofer__c</fullName>
        <label>Builder Preferred Roofer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Builder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Builder Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NH Communities (Builder Name)</relationshipLabel>
        <relationshipName>NH_Communities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Building_Type__c</fullName>
        <label>Building Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single-Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Residential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>New Homes</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CalCERTS_Ready__c</fullName>
        <label>CalCERTS Ready</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_PV_Module_Qty__c</fullName>
        <label>Cash PV Module Qty</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Location__c</fullName>
        <label>City Location</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Climate_Zone__c</fullName>
        <label>Climate Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Adder__c</fullName>
        <label>Community Adder</label>
        <picklist>
            <picklistValues>
                <fullName>Job site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Disconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote AC disc. Near MSB (multifamily)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rapid Shutdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Meter &amp; Socket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMT conduit from array</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optional Community Adder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/4 Story Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Placards</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Community_ID__c</fullName>
        <description>Must be converted to auto number field after migrating the auto numbers (Name API field to Community_ID__c) from the old records.

Convert to Auto number with starting number as Current old auto number +1.</description>
        <displayFormat>C{000000}</displayFormat>
        <label>Community ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Community_Name__c</fullName>
        <description>Communities of the builder.  

version: KCM_02142016
modification date/time: 02/14/2016 6:02PM Pacific
author: Kane Chelster Macaspac
details:
1. Appended &apos;(picklist)&apos; to the Field Label.  
2. This field is now deprecated and replaced by the text field named Community Name (Community_Name_text__c)
3. please reference case 00643246 for details specific to this change</description>
        <label>Community Name (picklist)</label>
        <picklist>
            <picklistValues>
                <fullName>Sage Pointe @ The Oaks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vintage  @ The Oaks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serrano Ridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sea Cliff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission Gate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver Creek @ Audie Murphy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haywood at Five Knolls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gibraltar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crestview at Anaverde 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settler&apos;s Point at Ridgeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sage II at Portola Springs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presidio Point at SMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seneca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wildflower at Las Haciendas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acacia at Mahogany Hills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calabria (Meridian)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenwood Square - Pinecrest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plum Canyon Heights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinnacle at Roripaugh Ranch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ironwood at Mahogany Hills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stonecrest at The Cove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vicenza at Orchard Hills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Terraces at Alberhill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skylar at Playa Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabrillo at Monument Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monte Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serene at The Lodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harmony at The Lodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brighton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lynbrook at Preserve</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community_Name_text__c</fullName>
        <description>version: KCM_02142016
created date/time: 02/14/2016 6:07PM Pacific
author: Kane Chelster Macaspac
details:
1. Created to replace the picklist field Community_Name__c (now called Community Name (picklist))
2. please reference case 00643246 for specific details with regard to the creation of this field.</description>
        <label>Community Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Status__c</fullName>
        <label>Community Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community_Superintendent_Email__c</fullName>
        <label>Community Superintendent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Community_Superintendent_Name__c</fullName>
        <label>Community Superintendent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Superintendent_Phone_Number__c</fullName>
        <label>Community Superintendent Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Community_Type__c</fullName>
        <label>Community Type</label>
        <picklist>
            <picklistValues>
                <fullName>Solar Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Optional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distribution_Type__c</fullName>
        <label>Distribution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Supply Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunpower Install</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EE_Plan_Check_Type__c</fullName>
        <label>EE Plan Check Type</label>
        <picklist>
            <picklistValues>
                <fullName>CAHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMFNH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Community_Construction_Start__c</fullName>
        <label>Expected Community Construction Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Offering__c</fullName>
        <description>NH migration- This field stores information that is being used to display correct options in the drop down on the quick quotes. If a community offers only Lease Financial offering, the NH partner can only quote Leases.</description>
        <label>Financial Offering</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Inspection_Contract_Type__c</fullName>
        <label>Inspection Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>No Inspection Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Results Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection &amp; HERS Certificates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Installer Partner assigned to the Community</description>
        <label>Installer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>New_Homes_Cummunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inverter_Type__c</fullName>
        <label>Inverter Type</label>
        <picklist>
            <picklistValues>
                <fullName>200 Series AC Modules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300 Series AC Modules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power-One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMA-SB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMA-TL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Iplot_Design_Notes__c</fullName>
        <label>Iplot Design Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Master_Development_Permitting_Name__c</fullName>
        <label>Master Development (Permitting Name)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mounting_Type__c</fullName>
        <label>Mounting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invisimount - SunModo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount - SunModo - Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount - Inset - SunModo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount - Inset - SunModo - Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount - Over Tile - QuickHook (Standard Height)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount - Over Tile - QuickHook (Low Height)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount - Over Tile - Stanchion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount - Flat Roof - Stanchion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount - Metal Roof - S5 Mini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower Smart Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UniRac Solar Mount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Homes_Reserved__c</fullName>
        <label>Number of Homes Reserved</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Homes_in_Community__c</fullName>
        <label>Number of Homes in Community</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Plan_Types__c</fullName>
        <label>Number of Plan Types</label>
        <summaryForeignKey>Plan_Type__c.Community__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PV_HERS_Provider__c</fullName>
        <label>PV HERS Provider</label>
        <picklist>
            <picklistValues>
                <fullName>CHEERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CalCERTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PV_Module_Model__c</fullName>
        <label>PV Module Model</label>
        <picklist>
            <picklistValues>
                <fullName>230W (Model SPR-230NE-BLK-D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250W (Model SPR-X20-250-BLK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250W (Model SPR-X20-250-BLK-B-AC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327W (Model SPR-327NE-WHT-D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327W (Model SPR-E20-327-C-AC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>335W (Model SPR-X21-335-BLK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>335W (Model SPR-X21-335-BLK-C-AC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>335W (Model SPR-X21-335-WHT-C-AC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>345W (Model SPR-X21-345)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>345W (Model SPR-X21-345-C-AC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>360 WHT (Model SPR-X22-360-WHT-D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>360W (Model SPR-X22-360-C-AC)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Panel_Orientation__c</fullName>
        <label>Panel Orientation</label>
        <picklist>
            <picklistValues>
                <fullName>Portrait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landscape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Permit_Pack_Type__c</fullName>
        <label>Permit Pack Type</label>
        <picklist>
            <picklistValues>
                <fullName>MPPP Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPPP w/iPlot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPPP w/SSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPPP w/Builder Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPermit Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iplot only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPPP w/iPlot layout &amp; SLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Permitting_Notes__c</fullName>
        <label>Permitting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Plumb__c</fullName>
        <label>Pre-Plumb</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunpower</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Energy_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Energy Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NH_Communities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebate_Payable_To__c</fullName>
        <label>Rebate Payable To:</label>
        <picklist>
            <picklistValues>
                <fullName>Sunpower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeowner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rebate_Program__c</fullName>
        <label>Rebate Program</label>
        <picklist>
            <picklistValues>
                <fullName>No Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Notes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rebate_Reservation_Confirmation_Number__c</fullName>
        <label>Rebate Reservation Confirmation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Reservation_Expiry_Date__c</fullName>
        <label>Rebate Reservation Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Reservation_Type__c</fullName>
        <label>Rebate Reservation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MF/SF Mix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application per Lot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region in which the builder has property developments</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ-Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ-Remote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ-Tucson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CENTRAL VALLEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-Colorado Springs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-Northern CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N.CA-Bay Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N.CA-Central Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N.CA-NorCal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC-Charlotte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC-Raleigh/Durham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC-Winston/Salem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM-Albuquerque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM-Santa Fe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORCAL-Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S.CA-Coastal/OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S.CA-Inland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S.CA-LA/Ventura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S.CA-San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC-Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC-Coastal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC-Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOCAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOCAL-Corona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOCAL-Jurupa Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOCAL-Menifee</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registry_Notes__c</fullName>
        <label>Registry Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reservation_Amount_Per_Project__c</fullName>
        <label>Reservation $ Amount (Per Project)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reservation_Notes__c</fullName>
        <label>Reservation Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reserved_Incentive_Level__c</fullName>
        <label>Reserved Incentive Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reserved_KW__c</fullName>
        <label>Reserved KW</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rough_Wire__c</fullName>
        <label>Rough Wire</label>
        <picklist>
            <picklistValues>
                <fullName>Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunpower</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPWR_HERS_Rater_Name__c</fullName>
        <label>SPWR HERS Rater Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sheet_Size__c</fullName>
        <label>Sheet Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_add_on__c</fullName>
        <label>Solar add-on</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T24_Code_Reserved__c</fullName>
        <label>T24 Code Reserved</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Level__c</fullName>
        <label>Tier Level</label>
        <picklist>
            <picklistValues>
                <fullName>Code Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Sets__c</fullName>
        <label>Total Number of Sets</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>